<resources>
    <string name="app_name">MatchPoint</string>
    <string name="email">Email:</string>
    <string name="pass">Password:</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Register</string>
    <string name="has_account">Already have an account? login here.</string>
    <string name="need_account">Don\'t have an account? register here.</string>
    <string name="terms_n_conditions">By registering, you agree to out Terms and Conditions</string>
    <string name="title_casual">Casual</string>
    <string name="title_ranked">Ranked</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logout_button">Logout</string>
    <string name="edit_profile">Edit</string>
    <string name="preference">Preference</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interest_text">I\'m interested in…</string>
    <string name="age">Age</string>
    <string name="distance">Distance</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="everyone">Everyone</string>
    <string name="name_label">Name</string>
    <string name="gender_label">Gender</string>
    <string name="plays_label">Plays</string>
    <string name="about_label">About me</string>
    <string name="ava_label">Available for ranked</string>
    <string name="pref_key">matchpointSharedPref</string>
    <string name="gender_pref_key">pref_gender</string>
    <string name="age_upper_pref_key">pref_ageUpper</string>
    <string name="age_lower_pref_key">pref_ageLower</string>
    <string name="distance_pref_key">pref_distance</string>
    <string name="done">done</string>
    <string name="genderLabel">Gender</string>
    <string name="birthdayLabel">Date of birth</string>
    <string name="name_key">name</string>
    <string name="gender_key">gender</string>
    <string name="age_key">age</string>
    <string name="dob_key">dob</string>
    <string name="bio_key">bio</string>
    <string name="play_key">play</string>
    <string name="available_key">available</string>
    <string name="pics_key">pics</string>
    <string-array name="age_slider_val">
        <item>19</item>
        <item>40</item>
    </string-array>
    <string-array name="gender_vals">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
    <string-array name="plays_vals">
        <item>Right-handed, two-handed backhand</item>
        <item>Right-handed, one-handed backhand</item>
        <item>Left-handed, two-handed backhand</item>
        <item>Left-handed, one-handed backhand</item>
    </string-array>
</resources>