<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_casual">

    <fragment
        android:id="@+id/navigation_casual"
        android:name="com.lesliezhou.matchpoint.casual.CasualFragment"
        android:label="@string/title_casual"
        tools:layout="@layout/casual_fragment" />

    <fragment
        android:id="@+id/navigation_ranked"
        android:name="com.lesliezhou.matchpoint.ranked.RankedFragment"
        android:label="@string/title_ranked"
        tools:layout="@layout/ranked_fragment" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.lesliezhou.matchpoint.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/chat_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.lesliezhou.matchpoint.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
</navigation>