<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/emailField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/passField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupLogo"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/passField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/signup_button"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintBottom_toTopOf="@+id/termsAndCondText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passField" />

    <ImageView
        android:id="@+id/signupLogo"
        android:layout_width="0dp"
        android:layout_height="@dimen/image_header_height"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/matchpoint_transparent"
        app:layout_constraintBottom_toTopOf="@+id/emailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hasAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/has_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termsAndCondText" />

    <TextView
        android:id="@+id/termsAndCondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_n_conditions"
        app:layout_constraintBottom_toTopOf="@+id/hasAccountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton" />

    <TextView
        android:id="@+id/signupEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailField"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signupPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pass"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/passField"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>