<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.PreferenceFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/interestText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/interest_text"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/interestRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radioButtonMen"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector"
                android:textColor="@drawable/txt_color"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/men" />

            <RadioButton
                android:id="@+id/radioButtonWomen"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector"
                android:textColor="@drawable/txt_color"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/women" />

            <RadioButton
                android:id="@+id/radioButtonEveryone"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector"
                android:textColor="@drawable/txt_color"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/everyone" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/ageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/age"
            android:textSize="20sp" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/ageSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:stepSize="1"
            android:valueFrom="18"
            android:valueTo="90"
            app:values="@array/age_slider_val"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/distanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/distance"
            android:textSize="20sp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/distanceSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:stepSize="1"
            android:value="15"
            android:valueFrom="0"
            android:valueTo="90"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>